Fixed layout issue on small screen ; fixed redirect issue

--- a/src/app/shared/layouts/app/app.layout.scss
+++ b/src/app/shared/layouts/app/app.layout.scss
@@ -44,3 +44,11 @@
   border-radius: 50%;
   object-fit: cover;
 }
+
+
+
+@media (max-width: 400px) {
+  .website-name {
+    display: none;
+  }
+}
